# whilers

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  index.html  justfile  main-449c89a7c06521f.js  main-adbf12dcd54895bd.js  manifest.json  rust-toolchain.toml  sw.js  whilers-5216dfca7702e14d.js  whilers-5216dfca7702e14d_bg.wasm  whilers-b8ba57a3def0507b.js  whilers-b8ba57a3def0507b_bg.wasm  whilers-c40457df669d0253.js  whilers-c40457df669d0253_bg.wasm
.cargo/: config.toml
.github/workflows/: pages.yml
programs/: add.while  brackets.while  equalG.while  prog.while  simple_eq.while  swTest.while  switch1.while  switch2.while  switch3.while
src/: app.rs  atoms.rs  cli.rs  editor.rs  extended_to_core.rs  highlight.rs  interpret.rs  lang.rs  lib.rs  main.rs  niltree.rs  output.rs  parser.rs  prog_as_data.rs  utils.rs  variables.rs  web.rs  while.sublime-syntax  while.tmTheme
