[package]
name = "whilers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
nom = "7.1.3"
once_cell = "1.17.1"
regex = "1.7.3"
syntect = { version = "5.0.0", default-features = false, features = [
    "default-fancy",
    "plist-load"
] }
egui = "0.25"
eframe = { version = "0.25", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
time = "0.3.35" # rust 1.80 made an API change that means we need to use time >= 0.3.35 now

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

[profile.dev.package."*"]
opt-level = 3

# (hopefully) the best of both worlds from debug and release
[profile.mid]
inherits = "dev"
debug = 1
opt-level = 3
incremental = true
